objects/FSL__Scheduling_Policy_Goal__c.object
<CustomObject>
    <fields>
        <fullName>FSL__Scheduling_Policy__c</fullName>
        <label>Scheduling Policy</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipName>Scheduling_Policy_Goals</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Goal__c</fullName>
        <label>Service Goal</label>
        <referenceTo>FSL__Service_Goal__c</referenceTo>
        <relationshipName>Scheduling_Policy_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSL__Weight__c</fullName>
        <label>Weight</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Scheduling Policy Objective</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Scheduling Policy Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduling Policy Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FSL__Not_Zero</fullName>
        <active>true</active>
        <errorConditionFormula>FSL__Weight__c == 0</errorConditionFormula>
        <errorDisplayField>FSL__Weight__c</errorDisplayField>
        <errorMessage>Weight can&apos;t have zero value</errorMessage>
    </validationRules>
</CustomObject>